# loom

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CROSS_PLATFORM_SYSCALLS.md  DESIGN.md  LICENSE-COMPILER  LICENSE-MIT  README.md  WORKSPACE  clean_output.ll  correct_types_test.loom  debug_test.loom  feature_test.loom  if_else_false_test.loom  if_test.loom  integrated_test.loom  minimal_test.loom  output.ll  simple_print_test.loom  simple_test.loom  string_only_test.loom  test.loom  test_program.loom  type_test.loom
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  language_proposal.yml  performance_issue.yml  question.yml
compiler/: BUILD.bazel  CMakeLists.txt  README.md  main.cc
compiler/codegen/: codegen.cc  codegen.hh
compiler/common/: logger.cc  logger.hh
compiler/parser/: ast.hh  ast_printer.cc  ast_printer.hh  parser.cc  parser_expression.cc  parser_internal.hh  parser_statement.cc
compiler/scanner/: scanner.cc  scanner_internal.hh
compiler/sema/: semantic_analyze.hh  semantic_analyzer.cc  semantic_analyzer.hh  symbol_table.cc  symbol_table.hh
docs/: BAZEL_SETUP.md
examples/: BUILD.bazel  CMakeLists.txt  README.md  advanced_syscalls.loom  cross_platform_demo.loom  hello_world.loom  system_interaction.loom
stdlib/: BUILD.bazel  README.md
testing/: BUILD.bazel  CMakeLists.txt  README.md
