# Loom Standard Library Build Configuration
# Note: This will eventually contain Loom source files when the language is self-hosting

package(default_visibility = ["//visibility:public"])

# For now, this is a placeholder. In the future, when Loom can compile itself,
# this will contain build rules for the standard library written in Loom.

# Example of what this might look like in the future:
# loom_library(
#     name = "core",
#     srcs = [
#         "core/string.loom",
#         "core/array.loom", 
#         "core/io.loom",
#         "core/math.loom",
#     ],
# )

# loom_library(
#     name = "collections",
#     srcs = [
#         "collections/list.loom",
#         "collections/map.loom",
#         "collections/set.loom",
#     ],
#     deps = [":core"],
# )

# For now, we can include placeholder files
filegroup(
    name = "stdlib_sources",
    srcs = glob(["**/*.loom"]) + [
        "README.md",
    ],
)

# Future: Define custom Loom compilation rules
# These would be similar to cc_library but for Loom source files
